# HLWA

./: .gitignore  CMakeLists.txt  HLWA.sln  HLWR.sln  README.md  build-cmake-clang.bat  build-cmake-gcc.bat  build-cmake-vs22-clang.bat  build-premake5-vs22-clang.bat  build.bat  compile-cmake-debug.bat  compile-cmake-release.bat  premake5.lua
HLWA/: HLWA.vcxproj  HLWA.vcxproj.filters
HLWA/include/HLWA/: core.hpp  ext_accents.hpp  ext_displaymesh.hpp  ext_glassware.hpp  ext_jumplist.hpp  ext_logprocessor.hpp  ext_registry.hpp  ext_taskbar.hpp  ext_utils.hpp  hlwa.hpp  types.hpp
HLWA/src/HLWA/: ext_accents.cpp  ext_displaymesh.cpp  ext_glassware.cpp  ext_jumplist.cpp  ext_logprocessor.cpp  ext_registry.cpp  ext_taskbar.cpp  ext_utils.cpp  hlwa.cpp
HLWR/: HLWR.vcxproj  HLWR.vcxproj.filters  hlwr.hpp
HLWR/include/HLWR/: hlwr.hpp
HLWR/src/HLWR/: hlwr.cpp
examples/GlasswareExample/: CMakeLists.txt
examples/JumplistExample/: CMakeLists.txt
examples/RegistryExample/: CMakeLists.txt  main.cpp
examples/TaskbarExample/: CMakeLists.txt
